<resources>
    <string name="app_name">LazyBone</string>

    <string name="Login_button">LOGIN</string>
    <string name="Welcome_string">WELCOME \n SLOB</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="about1">Lazy Bones</string>
    <string name="version_detail">Version: Beta</string>
    <string name="copyright"> 2015 Lazy Bones</string>
    <string name="rights">All Rights Reserved</string>
    <string name="image">ic_launcher.png</string>
    <string name="ItemName">Item name</string>
    <string-array name="Items">
        <item>Naan </item>
        <item>Paneer Parantha</item>
        <item>Butter Roti</item>
        <item>Shahi Paneer</item>
    </string-array>
    <string name="dialog_message">Enter Amount</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
</resources>
